<resources>
    <string name="app_name">FlightFight</string>
    <string name="start_game">开始游戏</string>
    <string name="about_game">关于</string>
    <string name="quit">退出</string>
    <string name="load_game">读档</string>
    <string name="back_game">返回</string>
    <string name="save_game">存档</string>
    <string name="continue_game">继续</string>
    <string name="delete_store">删除</string>
    <string name="manage_store">管理</string>

    <string name="version">V1.0</string>
    <string name="pause">暂停</string>
    <string name="finish_game">恭喜！通关</string>
    <string name="restart_game">重新开始</string>
    <string name="game_info">  app名称:飞机大战\n版本:V1.0\n本游戏由三人开发而成,通关条件为击杀所有敌人飞机或者击杀boss。子弹自动发射，只需要控制好飞机躲避子弹即可</string>
    <string name="game_name">飞机大战V1.0</string>
    <string name="yzc_info">姓名:严子超 学号:8002117042\n班级:软件工程1701\n负责app的菜单显示，及时状态，主界面设计，通过过关设置。暂停等设计</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="score_game">排行榜</string>
    <string name="record">排行榜</string>
    <string name="ykw_info">姓名:闫坤炜 学号:8002117038\n班级:软件工程1701\n负责音乐播放，玩家控制，部分游戏逻辑(碰撞检测、关卡)，游戏存档，排行榜存储以及部分游戏主循环等设计</string>



    <string name="zjt_info">姓名:朱锦涛 学号:8002117037\n班级:软件工程1701\n负责NPC及BOSS，爆炸设计</string>

</resources>
