<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadGameActivity"
    android:orientation="vertical"
    android:background="@mipmap/startback"
    >
    <TextView
        android:layout_width="match_parent"
        android:text="@string/load_game"
        android:textSize="40dp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <ListView
        android:id="@+id/load_game_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        />
    <Button
        android:id="@+id/manage_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_store"
        android:gravity="center"
        android:layout_gravity="center"/>
    <Button
        android:id="@+id/load_bck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_game"
        android:gravity="center"
        android:layout_gravity="center"/>
</LinearLayout>