<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".yzc.endingFragment"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <TextView
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:text="@string/finish_game"
        android:textSize="30sp"
        android:textColor="#FFFFFF"
        android:textAlignment="center"

        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/pause_continue_game"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:text="@string/restart_game"
        android:textAlignment="center"
        android:background="@mipmap/menu"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/pause_bck_menu"
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:textSize="25sp"
        android:textColor="#FFFFFF"
        android:text="@string/quit"
        android:textAlignment="center"
        android:background="@mipmap/menu"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        />
</LinearLayout>