<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/startback"
    tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/startback"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="#FFFFFF"
                android:textSize="70sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3"
                android:textAlignment="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/version"
                android:textColor="#FFFFFF"
                android:textSize="40sp"
                android:layout_gravity="center"
                android:textAlignment="center"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.5"
               />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="作者:严子超, 闫坤炜, 朱锦涛"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textAlignment="center"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7"
                android:textSize="30sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/game_name"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_margin="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.596"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4">
            <TextView
                android:id="@+id/main_start_game"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@mipmap/menu"
                android:text="@string/start_game"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="25dp"
                />
            <TextView
                android:id="@+id/main_about_game"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@mipmap/menu"
                android:text="@string/about_game"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="25dp"
                />
            <TextView
                android:id="@+id/main_load_game"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@mipmap/menu"
                android:text="@string/load_game"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="25dp"
                />
            <TextView
                android:id="@+id/main_score_game"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@mipmap/menu"
                android:text="@string/record"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="25dp"
                />
            <TextView
                android:id="@+id/main_quit_game"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:background="@mipmap/menu"
                android:text="@string/quit"
                android:textColor="#FFFFFF"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="25dp"
                />
        </LinearLayout>

        <ImageView
            android:id="@+id/music_control"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_volume_up_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.92"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>








</androidx.constraintlayout.widget.ConstraintLayout>